--- a/kon_karin/src/assets/style/style.scss
+++ b/kon_karin/src/assets/style/style.scss
@@ -50,10 +50,11 @@ h2 {
   margin-bottom: 0.5em;
   text-align: left;
   font-size: 2.8rem;
-  letter-spacing: .1em;
+  letter-spacing: 0.3em;
 }
 h3 {
   margin-top: 0.5em;
+  margin-bottom: 0.5em;
   text-align: left;
   font-size: 2.2rem;
 }
@@ -175,8 +176,10 @@ a {
     display: block;
     width: 100%;
     padding-left: 15px;
+    padding-top: 1em;
     h3 {
       font-size: 1.2em;
+      padding-top: 1em;
     }
     p {
       font-size: 0.9em;
@@ -201,6 +204,7 @@ a {
 .thumb-box {
   width: 100%;
   height: 100%;
+  cursor: pointer;
 }
 @media (max-width: $sp) {
   .gallery {
