--- a/kon_karin/src/assets/style/style.scss
+++ b/kon_karin/src/assets/style/style.scss
@@ -14,17 +14,6 @@ $pc: 1200px;
   display: none;
 }
 
-/* transition */
-.fade-enter-active {
-  transition: opacity 0.5s ease-in
-}
-.fade-leave-active {
-  transition: opacity .1s ease-out
-}
-.fade-enter, .fade-leave-to {
-  opacity: 0
-}
-
 /* common */
 html {
   height: 100%;
@@ -148,6 +137,17 @@ a {
   height: 100vh;
 }
 
+/* transition */
+.fade-enter-active {
+  transition: opacity 0.5s ease-in
+}
+.fade-leave-active {
+  transition: opacity .1s ease-out
+}
+.fade-enter, .fade-leave-to {
+  opacity: 0
+}
+
 /* wrapper */
 .wrapper {
   max-width: $pc;
@@ -190,6 +190,7 @@ a {
 /* gallery */
 .gallery {
   display: flex;
+  padding-top: 1em;
   flex-wrap: wrap;
   flex-direction: row;
   justify-content: center;
@@ -225,9 +226,8 @@ a {
   left: 0;
   right: 0;
   background-color: rgba(65, 65, 65, 0.8);
-  transition: opacity .3s ease;
 }
-.modal-body {
+.modal-container {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -240,27 +240,51 @@ a {
 .modal-img {
   width: 90%;
 }
-.modal-enter {
-  opacity: 0;
+.fade-modal-enter-active, .fade-modal-leave-active {
+  transition: opacity .4s
 }
-.modal-leave-active {
-  opacity: 0;
-}
-.modal-enter .modal-container,
-.modal-leave-active .modal-container {
-  -webkit-transform: scale(1.1);
-  transform: scale(1.1);
+.fade-modal-enter, .fade-modal-leave-to {
+  opacity: 0
 }
 
 /* font awesome */
 .fa-fw {
   margin: 10px;
 }
+.fa-color {
+  color: $link;
+}
 
 /* imguploader */
-label {
-
+.auth-area{
+  text-align: right;
+  margin-right: 20px;
+}
+.flat-button {
+  display: inline-block;
+  padding: 0.3em 1em;
+  text-decoration: none;
+  background-color: #f9f9f9;
+  color: $link;
+  border: solid 2px $link;
+  border-radius: 3px;
+  transition: .4s;
+  &:hover {
+    cursor: pointer;
+    background: $link;
+    color: #fff;
+  }
+}
+.input-item {
+  cursor: pointer;
   input {
     display: none;
   }
+}
+.upload-button {
+  cursor: pointer;
+  background-color: transparent;
+  border: none;
+  outline: none;
+  appearance: none;
 }
