--- a/kon_karin/src/assets/style/style.scss
+++ b/kon_karin/src/assets/style/style.scss
@@ -203,9 +203,19 @@ a {
   padding: 4px 4px;
 }
 .thumb-box {
+  cursor: pointer;
+  overflow: hidden;
+}
+.thumb-img {
   width: 100%;
   height: 100%;
-  cursor: pointer;
+  display: block;
+  transition-duration: 0.3s;
+  &:hover {
+    transform: scale(1.1);
+    transition-duration: 0.3s;
+    opacity: 0.6;
+  }
 }
 @media (max-width: $sp) {
   .photo-box {
