--- a/kon_karin/src/assets/style/style.scss
+++ b/kon_karin/src/assets/style/style.scss
@@ -253,6 +253,29 @@ a {
 .fade-modal-enter, .fade-modal-leave-to {
   opacity: 0
 }
+.loader {
+  position: absolute;
+  width: 80px;
+  height: 80px;
+  border-radius: 50%;
+  border: 10px solid  #fff;
+  border-right-color: transparent;
+  animation: spin 1s linear infinite;
+}
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+    opacity: 0.2;
+  }
+  50% {
+    transform: rotate(180deg);
+    opacity: 1.0;
+  }
+  100% {
+    transform: rotate(360deg);
+    opacity: 0.2;
+  }
+}
 
 /* font awesome */
 .fa-fw {
