--- a/src/assets/style/style.scss
+++ b/src/assets/style/style.scss
@@ -1,6 +1,6 @@
 @charset 'utf-8';
-@import '_reset.css';
-@import url('https://fonts.googleapis.com/css?family=Poiret+One');
+@import "_reset.css";
+@import url("https://fonts.googleapis.com/css?family=Poiret+One");
 
 /* Variables */
 $text: hsl(50, 20%, 20%);
@@ -26,33 +26,41 @@ body {
   font-size: 1.6rem;
   line-height: 1.8;
 }
-h1,h2,h3 {
+h1,
+h2,
+h3 {
   line-height: 1.4;
 }
 h1 {
+  font-weight: bold;
   text-align: center;
   font-size: 3.2rem;
-  letter-spacing: .1em;
+  letter-spacing: 0.1em;
 }
 h2 {
-  margin-top: 1em;
-  margin-bottom: 0.5em;
+  font-weight: bold;
+  margin-top: 2rem;
+  margin-bottom: 1rem;
   text-align: left;
   font-size: 2.8rem;
   letter-spacing: 0.3em;
 }
 h3 {
-  margin-top: 0.5em;
-  margin-bottom: 0.5em;
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
   text-align: left;
   font-size: 2.2rem;
+  margin: 1rem 2rem;
 }
 p {
-  margin: 0.5em;
+  margin: 1rem 4rem;
 }
 a {
   color: $link;
   text-decoration: none;
+  &:hover {
+    text-decoration: underline;
+  }
 }
 @media (max-width: $pc) {
   h2 {
@@ -63,7 +71,7 @@ a {
 #app {
   background-color: #f9f9f9;
   height: 100%;
-  font-family: 'Lato','Avenir', Helvetica, Arial, sans-serif;
+  font-family: "Lato", "Avenir", Helvetica, Arial, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-overflow-scrolling: touch;
@@ -83,7 +91,7 @@ a {
   left: 0;
   right: 0;
   z-index: 9999;
-  background-color: #fff ;
+  background-color: #fff;
 }
 .header-nav {
   li {
@@ -94,14 +102,19 @@ a {
     display: inline-block;
     color: $text;
     font-size: 1.8rem;
-    letter-spacing: .1em;
+    letter-spacing: 0.1em;
     padding: 16px 24px;
     text-decoration: none;
   }
 }
 @media (min-width: $pc) {
   .header-nav {
+
     a {
+      // &:hover {
+        // background-color: rgb(240, 240, 240);
+        // transition: opacity 0.4s
+      // }
       &::after {
         position: absolute;
         top: 100%;
@@ -110,7 +123,7 @@ a {
         height: 2px;
         background: #000;
         opacity: 0;
-        content: '';
+        content: "";
         transition: opacity 0.4s, transform 0.4s;
       }
       &:hover::after {
@@ -122,11 +135,14 @@ a {
 }
 @media (max-width: $sp) {
   .header-nav {
-    a{
+    a {
       font-size: 1.6rem;
       padding: 8px 16px;
     }
   }
+}
+.router-link-exact-active {
+  background-color: rgb(240, 240, 240);
 }
 
 /* home */
@@ -139,25 +155,26 @@ a {
 
 /* transition */
 .fade-enter-active {
-  transition: opacity 0.5s ease-in
+  transition: opacity 0.5s ease-in;
 }
 .fade-leave-active {
-  transition: opacity .1s ease-out
+  transition: opacity 0.1s ease-out;
 }
-.fade-enter, .fade-leave-to {
-  opacity: 0
+.fade-enter,
+.fade-leave-to {
+  opacity: 0;
 }
 
 /* wrapper */
 .wrapper {
   max-width: $pc;
   width: 100%;
-  margin: 100px auto 0;
+  margin: 100px auto;
   text-align: center;
 }
 @media (max-width: $sp) {
   .wrapper {
-    margin: 60px auto 0;
+    margin: 60px auto;
   }
 }
 
@@ -166,20 +183,22 @@ a {
   display: inline-block;
   vertical-align: top;
   box-sizing: border-box;
-  width: 400px;
+  max-width: 700px;
   padding: 0 20px;
   margin: 0 auto;
   text-align: left;
 }
 @media (max-width: $pc) {
-  .profile{
+  .profile {
     display: block;
     width: 100%;
     padding-left: 15px;
     padding-top: 1em;
+    h2 {
+      margin-top: 1em;
+    }
     h3 {
       font-size: 1.2em;
-      padding-top: 1em;
     }
     p {
       font-size: 0.9em;
@@ -203,10 +222,10 @@ a {
   padding: 4px 4px;
 }
 .thumb-box {
-  cursor: pointer;
   overflow: hidden;
 }
 .thumb-img {
+  cursor: pointer;
   width: 100%;
   height: 100%;
   display: block;
@@ -219,7 +238,7 @@ a {
 }
 @media (max-width: $sp) {
   .photo-box {
-    width:50%;
+    width: 50%;
   }
 }
 
@@ -238,7 +257,7 @@ a {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  max-width:$pc;
+  max-width: $pc;
   width: 100%;
   height: 100%;
   margin: 0 auto;
@@ -247,18 +266,20 @@ a {
 .modal-img {
   width: 90%;
 }
-.fade-modal-enter-active, .fade-modal-leave-active {
-  transition: opacity .4s
+.fade-modal-enter-active,
+.fade-modal-leave-active {
+  transition: opacity 0.4s;
 }
-.fade-modal-enter, .fade-modal-leave-to {
-  opacity: 0
+.fade-modal-enter,
+.fade-modal-leave-to {
+  opacity: 0;
 }
 .loader {
   position: absolute;
   width: 80px;
   height: 80px;
   border-radius: 50%;
-  border: 10px solid  #fff;
+  border: 10px solid #fff;
   border-right-color: transparent;
   animation: spin 1s linear infinite;
 }
@@ -269,7 +290,7 @@ a {
   }
   50% {
     transform: rotate(180deg);
-    opacity: 1.0;
+    opacity: 1;
   }
   100% {
     transform: rotate(360deg);
@@ -285,25 +306,34 @@ a {
   color: $link;
 }
 
-/* imguploader */
-.auth-area{
-  text-align: right;
-  margin-right: 20px;
+/* MyPage */
+.auth-area {
+  margin-top: 1em;
 }
 .flat-button {
-  display: inline-block;
+  font-size: 1em;
   padding: 0.3em 1em;
   text-decoration: none;
   background-color: #f9f9f9;
   color: $link;
   border: solid 2px $link;
   border-radius: 3px;
-  transition: .4s;
+  transition: 0.4s;
   &:hover {
     cursor: pointer;
     background: $link;
     color: #fff;
   }
+}
+.sign-in {
+}
+.sign-out {
+  display: block;
+  margin: 0 0 0 auto;
+}
+.edit-button {
+  display: block;
+  margin: 0 0 0 auto;
 }
 .input-item {
   cursor: pointer;
@@ -317,4 +347,17 @@ a {
   border: none;
   outline: none;
   appearance: none;
+}
+.img-checkbox {
+  display: none;
+  &:checked + div {
+    outline: 5px solid $link;
+    outline-offset: -5px;
+  }
+}
+.select-img {
+  cursor: pointer;
+  width: 100%;
+  height: 100%;
+  display: block;
 }
