--- a/src/assets/style/style.scss
+++ b/src/assets/style/style.scss
@@ -347,6 +347,9 @@ a {
   border: none;
   outline: none;
   appearance: none;
+  &:disabled {
+    cursor: default;
+  }
 }
 .img-checkbox {
   display: none;
