--- a/src/assets/style/style.scss
+++ b/src/assets/style/style.scss
@@ -307,6 +307,21 @@ a {
 }
 
 /* MyPage */
+.overlay {
+  display: flex;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 9999;
+  height: 100%;
+  width: 100%;
+  background: rgba(65, 65, 65, 0.8);
+  justify-content: center;
+  max-width: $pc;
+  width: 100%;
+  height: 100%;
+  align-items: center;
+}
 .auth-area {
   margin-top: 1em;
 }
