--- a/app/assets/style/style.scss
+++ b/app/assets/style/style.scss
@@ -1,18 +1,19 @@
 @charset 'utf-8';
-@import '@/assets/style/_reset.css';
-@import url('https://fonts.googleapis.com/css?family=Poiret+One');
 
 /* Variables */
-$black: rgb(26, 26, 26);
-$gray: rgb(179, 179, 179);
-$lightGray: rgb(240, 240, 240);
-$yellow: rgb(255, 219, 74);
-$whiteYellow: rgba(255, 236, 156, 0.5);
-$darkYellow: rgb(240, 195, 14);
-$white: rgb(255, 255, 255);
-
-$sp: 520px;
-$tab: 960px;
+:root {
+  --black: rgb(26, 26, 26);
+  --gray: rgb(179, 179, 179);
+  --lightGray: rgb(240, 240, 240);
+  --yellow: rgb(255, 173, 31);
+  --middleYellow: rgb(255, 173, 31, 0.5);
+  --lightYellow: rgb(255, 173, 31, 0.1);
+  --darkYellow: rgb(230, 156, 28);
+  --yellow: rgb(255, 173, 31);
+  --white: rgb(255, 255, 255);
+  --sm: 520px;
+  --md: 960px;
+}
 
 /* v-cloak */
 [v-cloak] {
@@ -21,12 +22,12 @@ $tab: 960px;
 
 /* common */
 html {
-  color: $black;
+  color: var(--black);
   -webkit-text-size-adjust: 100%;
   // font-family: "Lato", "Avenir", Helvetica, Arial, sans-serif;
 }
 
-@media (max-width: $tab) {
+@media (max-width: var(--md)) {
   html {
     font-size: 15px;
   }
@@ -48,6 +49,14 @@ h4 {
   font-size: 1.1rem;
 }
 
+a {
+  color: var(--yellow);
+  text-decoration: none;
+  &:hover {
+    text-decoration: underline;
+  }
+}
+
 .pageTitle {
   text-align: center;
 }
@@ -57,14 +66,6 @@ h4 {
   margin-bottom: 1rem;
   margin-left: 4rem;
   margin-right: 4rem;
-}
-
-a {
-  color: $yellow;
-  text-decoration: none;
-  &:hover {
-    text-decoration: underline;
-  }
 }
 
 /* header */
@@ -82,35 +83,35 @@ a {
 .headerNav__item {
   position: relative;
   display: inline-block;
-  color: $gray;
+  color: var(--gray);
   font-size: 1.2rem;
   letter-spacing: 0.1em;
   padding: 1rem 1.5rem;
   text-decoration: none;
   &--active {
-    color: $black;
+    color: var(--black);
     &::after {
       position: absolute;
       bottom: 0;
       left: 0;
       width: 100%;
       height: 2px;
-      background-color: $black;
+      background-color: var(--black);
       content: '';
     }
   }
 }
 
-@media (min-width: $tab) {
+@media (min-width: var(--md)) {
   .headerNav__item {
     transition: color 0.2s;
     &:hover {
-      color: $black;
+      color: var(--black);
       text-decoration: none;
     }
   }
 }
-@media (max-width: $sp) {
+@media (max-width: var(--sm)) {
   .headerNav__item {
     font-size: 1rem;
     padding: 0.5rem 1rem;
@@ -125,7 +126,7 @@ a {
   height: calc(100vh - 61px);
 }
 
-@media (max-width: $tab) {
+@media (max-width: var(--md)) {
   .home-image {
     height: calc(100vh - 38px);
   }
@@ -150,7 +151,7 @@ a {
   margin: 0 auto;
   padding: 3rem 4rem;
 }
-@media (max-width: $sp) {
+@media (max-width: var(--sm)) {
   .wrapper {
     margin: 0;
     padding: 2rem 1rem;
@@ -163,7 +164,7 @@ a {
   padding: 2rem 2rem;
   margin: 0 auto;
 }
-@media (max-width: $sp) {
+@media (max-width: var(--sm)) {
   .profile {
     display: block;
     width: 100%;
@@ -217,7 +218,7 @@ a {
     opacity: 0.6;
   }
 }
-@media (max-width: $sp) {
+@media (max-width: var(--sm)) {
   .photo-box {
     width: 50%;
   }
@@ -280,14 +281,6 @@ a {
   }
 }
 
-/* font awesome */
-.fa-fw {
-  margin: 10px;
-}
-.fa-color {
-  color: $yellow;
-}
-
 /* MyPage */
 .overlay {
   display: flex;
@@ -313,8 +306,8 @@ a {
   height: 38px;
   padding: 0.3em 1em;
   text-decoration: none;
-  background-color: $yellow;
-  color: $white;
+  background-color: var(--yellow);
+  color: var(--white);
   border: 0;
   border-radius: 0.5em;
   transition: 0.4s;
@@ -323,20 +316,38 @@ a {
   }
   &:hover {
     cursor: pointer;
-    background: $darkYellow;
+    background: var(--darkYellow);
   }
   &:disabled {
     cursor: default;
-    opacity: 0.5;
-    &:hover {
-      background-color: $yellow;
-    }
+    background: var(--middleYellow);
   }
 }
 
+.imgUploader {
+  &__container {
+    display: flex;
+    align-items: center;
+  }
+  // &__content {
+  // }
+  &__selectImg {
+    cursor: pointer;
+    input {
+      display: none;
+    }
+  }
+  // &__selectBtn {
+  // }
+}
+
 .selectBtn {
-  color: $yellow;
-  font-size: 3em;
+  color: var(--yellow);
+  font-size: 3.3rem;
+  &:hover {
+    background-color: var(--lightYellow);
+    border-radius: 50%;
+  }
 }
 
 .sign-out {
@@ -349,17 +360,10 @@ a {
   margin: 0 0 0 auto;
 }
 
-.input-item {
-  cursor: pointer;
-  input {
-    display: none;
-  }
-}
-
 .img-checkbox {
   display: none;
   &:checked + div {
-    outline: 5px solid $yellow;
+    outline: 5px solid var(--yellow);
     outline-offset: -5px;
   }
 }
@@ -385,12 +389,14 @@ a {
     padding: 0.5rem 1.5rem;
     font-weight: bold;
     font-size: 1.1em;
+    color: var(--gray);
     &:hover {
       text-decoration: none;
+      border-radius: 2.5em;
+      background-color: var(--lightYellow);
     }
     &--active {
-      background-color: $whiteYellow;
-      border-radius: 2.5em;
+      color: var(--yellow);
     }
   }
 
@@ -411,6 +417,7 @@ a {
   &__articleList {
     margin-top: 1rem;
   }
+
   &__articleItem {
     padding: 1rem 0;
   }
@@ -424,7 +431,7 @@ a {
   }
 
   &__title {
-    color: $black;
+    color: var(--black);
     font-weight: bold;
   }
 
@@ -453,8 +460,8 @@ a {
   position: relative;
   width: 30px;
   height: 30px;
-  color: $black;
-  background-color: $lightGray;
+  color: var(--black);
+  background-color: var(--lightGray);
   border-radius: 50%;
   transition: 0.2s;
   &__tooltip {
@@ -473,8 +480,8 @@ a {
     border-radius: 3px;
     box-shadow: 0 1px 2px rgb(0 0 0 / 30%);
     z-index: 200;
-    color: $white;
-    background-color: $black;
+    color: var(--white);
+    background-color: var(--black);
     &::before {
       content: '';
       position: absolute;
@@ -482,14 +489,14 @@ a {
       left: 50%;
       margin-left: -7px;
       border: 7px solid transparent;
-      border-bottom: 7px solid $black;
+      border-bottom: 7px solid var(--black);
     }
   }
 }
 
 .edit:hover {
-  color: $yellow;
-  background-color: $whiteYellow;
+  color: var(--yellow);
+  background-color: var(--yellow);
   .edit__tooltip {
     opacity: 1;
     visibility: visible;
