--- a/app/assets/style/style.scss
+++ b/app/assets/style/style.scss
@@ -3,8 +3,10 @@
 /* Variables */
 :root {
   --black: rgb(26, 26, 26);
+  --lightBlack: rgb(26, 26, 26, 0.1);
   --gray: rgb(179, 179, 179);
-  --lightGray: rgb(240, 240, 240);
+  --lightGray: rgb(179, 179, 179, 0.1);
+  --brightGray: rgb(240, 240, 240);
   --yellow: rgb(255, 173, 31);
   --middleYellow: rgb(255, 173, 31, 0.5);
   --lightYellow: rgb(255, 173, 31, 0.1);
@@ -304,6 +306,7 @@ a {
   font-size: 1em;
   font-weight: bold;
   height: 38px;
+  line-height: 1.8;
   padding: 0.3em 1em;
   text-decoration: none;
   background-color: var(--yellow);
@@ -394,6 +397,7 @@ a {
       text-decoration: none;
       border-radius: 2.5em;
       background-color: var(--lightYellow);
+      color: var(--yellow);
     }
     &--active {
       color: var(--yellow);
@@ -407,7 +411,10 @@ a {
 
   &__btn {
     display: flex;
-    margin: 1rem auto 0;
+    margin-top: 1rem;
+    &--center {
+      margin: 1rem auto 0;
+    }
   }
 
   &__title {
@@ -419,7 +426,8 @@ a {
   }
 
   &__articleItem {
-    padding: 1rem 0;
+    padding: 1rem 0 1.4rem;
+    border-bottom: 1px solid var(--lightBlack);
   }
 }
 
@@ -461,7 +469,7 @@ a {
   width: 30px;
   height: 30px;
   color: var(--black);
-  background-color: var(--lightGray);
+  background-color: var(--brightGray);
   border-radius: 50%;
   transition: 0.2s;
   &__tooltip {
@@ -496,7 +504,7 @@ a {
 
 .edit:hover {
   color: var(--yellow);
-  background-color: var(--yellow);
+  background-color: var(--lightYellow);
   .edit__tooltip {
     opacity: 1;
     visibility: visible;
