update: タイトルをクリックしやすいようにwidth100%指定

--- a/app/assets/style/style.scss
+++ b/app/assets/style/style.scss
@@ -440,8 +440,10 @@ a {
   }
 
   &__title {
+    width: 100%;
     color: var(--black);
     font-weight: bold;
+    text-decoration: none;
   }
 
   &__actionContainer {
