--- a/app/assets/style/style.scss
+++ b/app/assets/style/style.scss
@@ -55,15 +55,18 @@ h4 {
 }
 
 a {
-  color: var(--yellow);
   text-decoration: none;
+  color: inherit;
 }
 
 .pageTitle {
   font-size: 2rem;
   text-align: center;
-  &__link:hover {
-    text-decoration: underline;
+  &__link {
+    color: var(--yellow);
+    &:hover {
+      text-decoration: underline;
+    }
   }
 }
 
@@ -178,6 +181,7 @@ a {
 .sns {
   &__icon {
     margin-right: 0.5rem;
+    color: var(--yellow);
     &:last-child {
       margin-right: 0;
     }
@@ -406,13 +410,23 @@ a {
   &__inner {
     width: calc(100% - 300px);
   }
+
+  @media screen and (max-width: $md) {
+    &__inner {
+      width: 100%;
+    }
+  }
 }
 
 .sideMenu {
+  position: sticky;
+  top: 80px;
   width: 300px;
+  height: calc(100vh - 140px);
   padding-left: 3rem;
 
   &__content {
+    overflow-y: auto;
     margin-top: 2rem;
     &:first-child {
       margin-top: 1rem;
@@ -452,6 +466,12 @@ a {
     &__subTitle {
       color: var(--gray);
     }
+  }
+}
+
+@media screen and (max-width: $md) {
+  .sideMenu {
+    display: none;
   }
 }
 
@@ -506,13 +526,25 @@ a {
 .article {
   display: flex;
   justify-content: space-between;
-  // &__container {}
+  margin-top: 2rem;
+
+  &__container {
+    width: calc(100% - 300px);
+  }
+
+  @media screen and (max-width: $md) {
+    &__container {
+      width: 100%;
+    }
+  }
+
   &__content {
     margin-top: 1rem;
   }
 }
 
 .articleItem {
+  display: block;
   padding: 1rem 0;
   border-bottom: 1px solid var(--lightBlack);
 
@@ -557,7 +589,16 @@ a {
   }
 
   &__footer {
-    margin-top: 0.5em;
+    margin-top: 0.5rem;
+    display: flex;
+  }
+
+  &__tag {
+    margin-right: 0.5em;
+    color: var(--white);
+    background: var(--gray);
+    padding: 0.1em 0.4em 0.2em;
+    border-radius: 3px;
   }
 }
 
@@ -569,6 +610,7 @@ a {
   background-color: var(--brightGray);
   border-radius: 50%;
   transition: 0.2s;
+
   &__tooltip {
     display: inline-block;
     opacity: 0;
@@ -602,9 +644,47 @@ a {
 .edit:hover {
   color: var(--yellow);
   background-color: var(--lightYellow);
+
   .edit__tooltip {
     opacity: 1;
     visibility: visible;
     transition: 0.3s ease-in 0.2s;
+  }
+}
+
+.articleEdit {
+  &__title {
+    width: 100%;
+    height: 2.5rem;
+    border: 0;
+    padding: 0;
+    outline: 0;
+    resize: none;
+    font-size: 1.5rem;
+    font-weight: bold;
+    line-height: 1.6;
+    background-color: #fbfcff;
+  }
+
+  &__toggleBtn {
+    justify-content: flex-end;
+    margin-top: 0.5rem;
+  }
+
+  &__btn {
+    display: flex;
+    margin-top: 1rem;
+  }
+
+  &__tagContainer {
+    margin-top: 1rem;
+  }
+
+  &__tag {
+    outline: 0;
+    border-radius: 4px;
+    border: 1px solid #cbcbcb;
+    background-color: #fbfcff;
+    margin-left: 0.3rem;
   }
 }
