--- a/app/assets/style/style.scss
+++ b/app/assets/style/style.scss
@@ -94,6 +94,11 @@ a {
   letter-spacing: 0.1em;
   padding: 1rem 1.5rem;
   text-decoration: none;
+  transition: 0.3s;
+  &:hover {
+    color: var(--black);
+  }
+
   &--active {
     color: var(--black);
     &::after {
@@ -174,17 +179,28 @@ a {
     align-items: center;
     justify-content: center;
     margin-top: 1rem;
-    font-size: 4rem;
   }
 }
 
 .sns {
   &__icon {
     margin-right: 0.5rem;
-    color: var(--yellow);
     &:last-child {
       margin-right: 0;
     }
+  }
+}
+
+.shareBtn {
+  cursor: pointer;
+  color: var(--gray);
+  transition: 0.3s;
+  font-size: 2rem;
+  &:hover {
+    color: var(--black);
+  }
+  &--lg {
+    font-size: 4rem;
   }
 }
 
@@ -403,21 +419,6 @@ a {
   display: block;
 }
 
-.articleList {
-  display: flex;
-  justify-content: space-between;
-
-  &__inner {
-    width: calc(100% - 300px);
-  }
-
-  @media screen and (max-width: $md) {
-    &__inner {
-      width: 100%;
-    }
-  }
-}
-
 .sideMenu {
   position: sticky;
   top: 80px;
@@ -471,7 +472,11 @@ a {
 
 @media screen and (max-width: $md) {
   .sideMenu {
-    display: none;
+    margin-top: 6rem;
+    display: block;
+    width: 100%;
+    height: 100%;
+    padding: 0;
   }
 }
 
@@ -528,6 +533,11 @@ a {
   justify-content: space-between;
   margin-top: 2rem;
 
+  &__subTitle {
+    margin-top: 0.3rem;
+    color: var(--gray);
+  }
+
   &__container {
     width: calc(100% - 300px);
   }
@@ -535,18 +545,53 @@ a {
   @media screen and (max-width: $md) {
     &__container {
       width: 100%;
+      padding-bottom: 1rem;
+      border-bottom: 1px solid var(--lightBlack);
     }
   }
 
   &__content {
-    margin-top: 1rem;
+    margin-top: 2rem;
+  }
+
+  &__list {
+    width: calc(100% - 300px);
+  }
+
+  &__footer {
+    margin-top: 3rem;
+  }
+}
+
+@media screen and (max-width: $md) {
+  .article {
+    display: block;
+    &__list {
+      width: 100%;
+    }
+  }
+}
+
+.articleFooter {
+  margin-top: 4rem;
+  &__container {
+    display: flex;
+    padding-top: 2rem;
+  }
+
+  &__content {
+    margin-left: 0.3rem;
   }
 }
 
 .articleItem {
   display: block;
-  padding: 1rem 0;
+  margin-top: 1rem;
+  padding-bottom: 1rem;
   border-bottom: 1px solid var(--lightBlack);
+  &:first-child {
+    margin-top: 0;
+  }
 
   &__titleContainer {
     display: flex;
@@ -595,10 +640,20 @@ a {
 
   &__tag {
     margin-right: 0.5em;
-    color: var(--white);
-    background: var(--gray);
-    padding: 0.1em 0.4em 0.2em;
-    border-radius: 3px;
+  }
+}
+
+.articleTag {
+  color: var(--white);
+  background: var(--gray);
+  padding: 0.1em 0.4em 0.2em;
+  border-radius: 3px;
+
+  &--link {
+    transition: 0.3s;
+    &:hover {
+      opacity: 0.6;
+    }
   }
 }
 
