--- a/app/assets/style/style.scss
+++ b/app/assets/style/style.scss
@@ -609,10 +609,6 @@ a {
     transition: 0.2s;
     &:hover {
       text-decoration: none;
-    }
-  }
-  &:hover {
-    .articleItem__title {
       color: var(--yellow);
     }
   }
@@ -631,6 +627,7 @@ a {
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-left: 0.5rem;
   }
 
   &__footer {
@@ -697,6 +694,7 @@ a {
 }
 
 .edit:hover {
+  cursor: pointer;
   color: var(--yellow);
   background-color: var(--lightYellow);
 
