--- a/app/assets/style/style.scss
+++ b/app/assets/style/style.scss
@@ -131,7 +131,7 @@ a {
 
 /* home */
 .home-image {
-  background-image: url('~assets/images/HomeImg.jpg');
+  background-image: url('/HomeImg.jpg');
   background-size: cover;
   background-position: 50%;
   height: calc(100vh - 61px);
