fix: 存在しないパスへのリクエスト時にエラー画面を表示できるように修正

--- a/app/assets/style/style.scss
+++ b/app/assets/style/style.scss
@@ -73,8 +73,11 @@ a {
 }
 
 .error {
-  margin-top: 1rem;
+  margin-top: 5rem;
   text-align: center;
+  &__btn {
+    margin-top: 1rem;
+  }
 }
 
 .textMessage {
