--- a/app/assets/style/style.scss
+++ b/app/assets/style/style.scss
@@ -387,21 +387,6 @@ a {
   margin: 0 0 0 auto;
 }
 
-.img-checkbox {
-  display: none;
-  &:checked + div {
-    outline: 5px solid var(--yellow);
-    outline-offset: -5px;
-  }
-}
-
-.select-img {
-  cursor: pointer;
-  width: 100%;
-  height: 100%;
-  display: block;
-}
-
 .sideMenu {
   position: sticky;
   top: 80px;
@@ -500,6 +485,9 @@ a {
     padding-left: 200px;
     padding-bottom: 5rem;
     width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
   }
 
   &__title {
@@ -731,8 +719,6 @@ a {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-top: 1rem;
-
   :only-child {
     text-align: right;
   }
