--- a/app/assets/style/style.scss
+++ b/app/assets/style/style.scss
@@ -13,8 +13,8 @@
   --darkYellow: rgb(230, 156, 28);
   --yellow: rgb(255, 173, 31);
   --white: rgb(255, 255, 255);
-  --font: -apple-system, 'BlinkMacSystemFont', 'Hiragino Kaku Gothic ProN',
-    'Hiragino Sans', meiryo, sans-serif, 'Segoe UI Emoji';
+  --font: -apple-system, 'BlinkMacSystemFont', 'Hiragino Kaku Gothic ProN', 'Hiragino Sans', meiryo,
+    sans-serif, 'Segoe UI Emoji';
 }
 
 $sm: 520px;
@@ -147,18 +147,6 @@ a {
   .home-image {
     height: calc(100vh - 38px);
   }
-}
-
-/* transition */
-.page-enter-active {
-  transition: opacity 0.5s ease-in;
-}
-.page-leave-active {
-  transition: opacity 0.1s ease-out;
-}
-.page-enter,
-.page-leave-to {
-  opacity: 0;
 }
 
 /* wrapper */
