--- a/app/assets/style/style.scss
+++ b/app/assets/style/style.scss
@@ -491,9 +491,8 @@ a {
   height: 300px;
 }
 
-@media screen and (max-width: $md) {
+@media screen and (max-width: $sm) {
   .articleItem__eyeCatchOuter {
-    overflow: hidden;
     height: 200px;
   }
 }
