--- a/app/assets/style/style.scss
+++ b/app/assets/style/style.scss
@@ -488,7 +488,13 @@ a {
 
 .articleItem__eyeCatchOuter {
   overflow: hidden;
-  height: 300px;
+  height: 400px;
+}
+
+@media screen and ($sm <= width < $md) {
+  .articleItem__eyeCatchOuter {
+    height: 300px;
+  }
 }
 
 @media screen and (max-width: $sm) {
