--- a/app/assets/style/style.scss
+++ b/app/assets/style/style.scss
@@ -82,7 +82,7 @@ a {
   max-width: 1200px;
   width: 100%;
   margin: 0 auto;
-  padding: 3rem 4rem;
+  padding: 0 4rem 2rem;
 }
 @media screen and (max-width: $sm) {
   .wrapper {
@@ -205,38 +205,12 @@ a {
   }
   &:hover {
     cursor: pointer;
-    background: var(--darkYellow);
+    opacity: 0.7;
   }
   &:disabled {
     cursor: default;
     opacity: 0.5;
     background: var(--gray);
-  }
-}
-
-.imgUploader {
-  &__container {
-    display: flex;
-    align-items: center;
-  }
-  // &__content {
-  // }
-  &__selectImg {
-    cursor: pointer;
-    input {
-      display: none;
-    }
-  }
-  // &__selectBtn {
-  // }
-}
-
-.selectBtn {
-  color: var(--yellow);
-  font-size: 3.3rem;
-  &:hover {
-    background-color: var(--lightYellow);
-    border-radius: 50%;
   }
 }
 
@@ -317,44 +291,15 @@ a {
       padding: 2rem 1rem;
     }
   }
+}
 
-  &__nav {
-    position: fixed;
-  }
-
-  &__navItem {
-    display: flex;
-    padding: 0.5rem 1.5rem;
-    font-weight: bold;
-    font-size: 1.1em;
-    color: var(--gray);
-    &:hover {
-      text-decoration: none;
-      border-radius: 2.5em;
-      background-color: var(--lightYellow);
-      color: var(--yellow);
-    }
-    &--active {
-      color: var(--yellow);
-    }
-  }
-
-  &__content {
-    padding-left: 200px;
-    padding-bottom: 5rem;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-  }
-
-  &__title {
-    display: flex;
-  }
-
-  &__item {
-    margin-top: 1rem;
-  }
+.dashboard__content {
+  padding-left: 200px;
+  padding-bottom: 5rem;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 }
 
 .dashboardArticleList__header {
@@ -521,7 +466,6 @@ a {
 
 .edit:hover {
   cursor: pointer;
-  color: var(--yellow);
   background-color: var(--lightYellow);
 
   .edit__tooltip {
