--- a/app/assets/style/style.scss
+++ b/app/assets/style/style.scss
@@ -51,74 +51,18 @@ a {
   color: inherit;
 }
 
-.pageTitle {
-  font-size: 2rem;
-  text-align: center;
-  &__link {
-    color: var(--darkYellow);
-    @media screen and (min-width: $md) {
-      &:hover {
-        text-decoration: underline;
-      }
-    }
-  }
-}
-
-.error {
-  margin-top: 5rem;
-  text-align: center;
-}
-
-.error__btn {
-  margin-top: 1rem;
-}
-
-.textMessage {
-  margin: 1rem 4rem;
-}
-
 /* wrapper */
 .wrapper {
   max-width: 1200px;
   width: 100%;
   margin: 0 auto;
-  padding: 0 4rem 2rem;
+  padding: 0 4rem 4rem;
 }
 @media screen and (max-width: $sm) {
   .wrapper {
     margin: 0;
     padding: 2rem 1rem;
   }
-}
-
-.shareBtn {
-  cursor: pointer;
-  color: var(--gray);
-  font-size: 2rem;
-}
-
-@media screen and (min-width: $md) {
-  .shareBtn {
-    transition: 0.3s;
-    &:hover {
-      color: var(--black);
-    }
-  }
-}
-
-/* gallery */
-.gallery {
-  display: flex;
-  padding-top: 1em;
-  flex-wrap: wrap;
-  flex-direction: row;
-  justify-content: center;
-}
-.gallery-enter-active {
-  transition: opacity 0.5s ease-in;
-}
-.gallery-enter {
-  opacity: 0;
 }
 
 .fade-modal-enter-active,
@@ -128,30 +72,6 @@ a {
 .fade-modal-enter,
 .fade-modal-leave-to {
   opacity: 0;
-}
-.loader {
-  position: absolute;
-  width: 80px;
-  height: 80px;
-  border-radius: 50%;
-  border: 10px solid #fff;
-  border-right-color: transparent;
-  animation: spin 1s linear infinite;
-  z-index: 999;
-}
-@keyframes spin {
-  0% {
-    transform: rotate(0deg);
-    opacity: 0.2;
-  }
-  50% {
-    transform: rotate(180deg);
-    opacity: 1;
-  }
-  100% {
-    transform: rotate(360deg);
-    opacity: 0.2;
-  }
 }
 
 /* MyPage */
@@ -166,14 +86,6 @@ a {
   background: rgba(65, 65, 65, 0.8);
   justify-content: center;
   align-items: center;
-}
-
-.auth-area {
-  display: flex;
-  // margin-top: 1rem;
-  // margin-right: 1rem;
-  max-width: 1200px;
-  margin: 1rem auto 0;
 }
 
 .btn {
@@ -214,85 +126,6 @@ a {
   }
 }
 
-.sign-in,
-.sign-out {
-  margin: 0 0 0 auto;
-}
-
-.sideMenu {
-  position: sticky;
-  top: 80px;
-  width: 300px;
-  height: calc(100vh - 140px);
-  padding-left: 3rem;
-
-  &__content {
-    overflow-y: auto;
-    margin-top: 2rem;
-    &:first-child {
-      margin-top: 1rem;
-    }
-  }
-
-  &__title {
-    font-size: 1.2rem;
-    font-weight: bold;
-    padding-bottom: 0.5rem;
-    border-bottom: 1px solid var(--black);
-  }
-
-  &Item {
-    display: block;
-    margin-top: 1rem;
-    padding-bottom: 0.3rem;
-    border-bottom: 1px solid var(--lightBlack);
-
-    &__title {
-      margin-top: 0.3rem;
-      display: block;
-      width: 100%;
-      color: var(--black);
-      transition: 0.2s;
-      &:hover {
-        text-decoration: none;
-      }
-    }
-
-    &:hover {
-      .sideMenuItem__title {
-        color: var(--darkYellow);
-      }
-    }
-
-    &__subTitle {
-      color: var(--gray);
-    }
-  }
-}
-
-@media screen and (max-width: $md) {
-  .sideMenu {
-    margin-top: 6rem;
-    display: block;
-    width: 100%;
-    height: 100%;
-    padding: 0;
-  }
-}
-
-/* dashboard */
-.dashboard {
-  max-width: 1200px;
-  margin: 3rem auto 0;
-
-  @media screen and (max-width: $sm) {
-    .dashboard {
-      margin: 0;
-      padding: 2rem 1rem;
-    }
-  }
-}
-
 .dashboard__content {
   padding-left: 200px;
   padding-bottom: 5rem;
@@ -300,15 +133,6 @@ a {
   display: flex;
   flex-direction: column;
   gap: 1rem;
-}
-
-.dashboardArticleList__header {
-  display: flex;
-  justify-content: flex-end;
-}
-
-.dashboardArticleList__body {
-  margin-top: 1rem;
 }
 
 .articleItem {
@@ -333,82 +157,12 @@ a {
   }
 }
 
-.articleItem__eyeCatchOuter {
-  overflow: hidden;
-  height: 400px;
-}
-
-@media screen and ($sm <= width < $md) {
-  .articleItem__eyeCatchOuter {
-    height: 300px;
-  }
-}
-
-@media screen and (max-width: $sm) {
-  .articleItem__eyeCatchOuter {
-    height: 200px;
-  }
-}
-
-.articleItem__eyeCatchInner {
-  transition:
-    opacity 0.3s,
-    transform 0.3s;
-  height: 100%;
-}
-
-.articleItem__eyeCatch {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
-
-.articleItem__emptyEyeCatch {
-  display: grid;
-  justify-content: center;
-  height: 100%;
-  align-items: center;
-  font-size: 3rem;
-  filter: grayscale(1);
-  background: #eee;
-}
-
-.articleItem__titleContainer {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-}
-
 .articleItem__title {
   display: block;
   width: 100%;
   font-size: 1.5em;
   font-weight: bold;
   transition: 0.3s;
-}
-
-.articleItem__subTitle {
-  color: var(--gray);
-}
-
-.articleItem__actionContainer {
-  margin-top: 0.5rem;
-  display: flex;
-}
-
-.articleItem__edit {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-left: 0.5rem;
-}
-
-.articleItem__footer {
-  display: flex;
-}
-
-.articleItem__tag {
-  margin-right: 0.5em;
 }
 
 .articleTag {
@@ -425,122 +179,26 @@ a {
   }
 }
 
-.edit {
-  position: relative;
-  width: 30px;
-  height: 30px;
-  color: var(--black);
-  background-color: var(--brightGray);
-  border-radius: 50%;
-  transition: 0.2s;
+.sideMenuItem {
+  display: block;
+  margin-top: 1rem;
+  padding-bottom: 0.3rem;
+  border-bottom: 1px solid var(--lightBlack);
 
-  &__tooltip {
-    display: inline-block;
-    opacity: 0;
-    visibility: hidden;
-    position: absolute;
-    left: 50%;
-    transform: translateX(-50%);
-    bottom: -32px;
-    padding: 5px;
-    white-space: nowrap;
-    text-align: center;
-    font-size: 10.5px;
-    line-height: 1.3;
-    border-radius: 3px;
-    box-shadow: 0 1px 2px rgb(0 0 0 / 30%);
-    z-index: 200;
-    color: var(--white);
-    background-color: var(--black);
-    &::before {
-      content: '';
-      position: absolute;
-      top: -13px;
-      left: 50%;
-      margin-left: -7px;
-      border: 7px solid transparent;
-      border-bottom: 7px solid var(--black);
+  &:hover {
+    .sideMenuItem__title {
+      color: var(--darkYellow);
     }
   }
 }
 
-.edit:hover {
-  cursor: pointer;
-  background-color: var(--lightYellow);
-
-  .edit__tooltip {
-    opacity: 1;
-    visibility: visible;
-    transition: 0.3s ease-in 0.2s;
+.sideMenuItem__title {
+  margin-top: 0.3rem;
+  display: block;
+  width: 100%;
+  color: var(--black);
+  transition: 0.2s;
+  &:hover {
+    text-decoration: none;
   }
-}
-
-.articleEdit {
-  padding-bottom: 5rem;
-
-  &__title {
-    width: 100%;
-    height: 2.5rem;
-    border: 0;
-    padding: 0;
-    outline: 0;
-    resize: none;
-    font-size: 1.5rem;
-    font-weight: bold;
-    line-height: 1.6;
-    background-color: #fbfcff;
-  }
-}
-
-.dashboardEdit__head {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  :only-child {
-    text-align: right;
-  }
-}
-
-.dashboardEdit__headContainer {
-  display: grid;
-  gap: 4px;
-  flex-grow: 1;
-}
-
-.dashboardEdit__tagContainer {
-  display: flex;
-  gap: 5px;
-}
-
-.dashboardEdit__ogpContainer {
-}
-
-.dashboardEdit__ogpInput {
-  display: flex;
-  gap: 5px;
-  flex-grow: 1;
-}
-
-.dashboardEdit__ogpPreview {
-  max-height: 100px;
-}
-
-.dashboardEdit__ogpPreviewImg {
-  max-height: 100px;
-}
-
-.dashboardEdit__input {
-  outline: 0;
-  border-radius: 4px;
-  border: 1px solid #cbcbcb;
-  background-color: #fbfcff;
-  flex-grow: 1;
-}
-
-.dashboardEdit__btnWrapper {
-  display: flex;
-}
-
-.dashboardEdit__btn {
-  margin-left: 1rem;
 }
